<resources>
    <string name="app_name">Roomie Finder</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="online_appointment_system">Online Appointment System</string>
    <string name="your_schedule">Your Schedule</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_search">Search</string>
    <string name="nav_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search for name</string>
    <string name="nav_queue">Queue</string>
    <string name="tq">Today Queue</string>
    <string name="done">Done</string>
    <string name="add_activity">Add Activity</string>
    <string name="repeat_every_week">Repeat every week</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="gerald_damiano">Gerald Damiano</string>
    <string name="nav_chat">Chat</string>
    <string name="your_roommate">Completed:</string>
    <string name="todo">ToDo:</string>
    <string name="sign_out">sign out</string>
    <string name="add_errand">Add Errand</string>
    <string name="clear">clear</string>
    <string name="your_listing">Your Listing:</string>
    <string name="address">Address:</string>
    <string name="description">Description:</string>
    <string name="title">Title:</string>
    <string name="price">Price:</string>
    <string name="image">Image:</string>
</resources>
