<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="197dp"
        android:layout_height="109dp"
        android:contentDescription="@string/nav_profile"
        android:src="@drawable/baseline_person_black_24dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/gerald_damiano"
        android:id="@+id/name_placeholder"
        android:textColor="#000000"
        />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_placeholder"
        android:layout_centerVertical="true"
        android:layout_marginLeft="75dp"
        android:text="@string/edit"
        android:layout_marginStart="75dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_placeholder"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_toEndOf="@id/edit_button"
        android:layout_toRightOf="@id/edit_button"
        android:background="#FF0000"
        android:text="@string/sign_out"
        android:id="@+id/signout"
        />

    <TextView
        android:id="@+id/yourlisting"
        android:layout_width="183dp"
        android:layout_height="52dp"
        android:layout_below="@+id/name_placeholder"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="114dp"
        android:text="@string/your_listing"
        android:textColor="#000000"
        android:textSize="30sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myListing"
        android:layout_below="@+id/yourlisting"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

</RelativeLayout>